# asobi

./: .env.sample  .envrc  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  SKILL.md  asobi.toml  flake.nix  miku.toml  mise.toml  pyproject.toml  rosemary.toml
.agents/: CONTEXT.md  CURRENT_TASK.md  MEMORY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
benches/: allocations.rs  graph.rs  graph_criterion.rs  normalize.rs  skills.rs  sql_plans.rs  storage.rs  tasks.rs  vector.rs  vector_criterion.rs
docs/: CHANGELOG.md  architecture.md  response-contract.md  usage.md  workflow.md
docs/benchmarks/: 2026-05-22-graph-search-update.md  embedding-model-comparison.md  profiling.md
docs/decisions/: 0001-sqlite-only-v2-rewrite.md  0002-why-rusqlite.md  0003-retention-and-agent-ux.md
docs/plans/: 2026-03-03-kb-v0-2-0-design.md  2026-03-03-kb-v0-2-0-impl.md  2026-03-03-knowledge-base-design.md  2026-03-03-rosemary-kb-v0-1-0.md  2026-04-08-async-masterclass-plan.md  2026-05-20-mcp-knowledge-graph-design.md  2026-05-20-mcp-knowledge-graph-plan.md  2026-05-22-memory-improvement-plan.md
docs/research/: 2026-07-12-oss-lifecycle-memory.md
docs/specs/: 2026-04-08-async-masterclass-design.md  2026-06-11-skills-and-truths-plan.md  2026-06-11-skills-and-truths.md  2026-06-18-v0.2-plan.md  2026-07-01-sequential-observation-ids.md  2026-07-07-v0.4-plan.md  2026-07-11-backend-api-v1.md  2026-07-11-backend-boundary-v1-plan.md  2026-07-11-storage-composition-adr.md  2026-07-12-versioned-response-schema.md  2026-07-17-sqlite-boundary.md  2026-07-17-v0.6-backend-design.md  2026-07-17-v0.6-sqlx-sqlite-boundary.md
examples/: client_framed.rs  server_framed.rs  tokio_actor.rs
scripts/: example.py  use_cases.py  verify_cli.py  verify_cli.turso.py  verify_documents_cli.py  verify_storage_boundary.py
src/: api.rs  application.rs  backup.rs  chunk.rs  compact.rs  constant.rs  db.rs  frontmatter.rs  ingest.rs  init.rs  kb.rs  lib.rs  main.rs  mcp.rs  model.rs  normalize.rs  normalize_test.rs  paths.rs  recall.rs  response.rs  skills.rs  tasks.rs  turso.rs  vector.rs
src/api/: mod.rs  v1.rs  v2.rs
src/backend/: mod.rs  turso.rs
src/backend/libsql/: db.rs  mod.rs  tx.rs  vector.rs
src/backend/turso/: constant.rs  db.rs  mod.rs  vector.rs
src/cli/: commands.rs  dispatch.rs  graph.rs  mod.rs  output.rs  runtime.rs  skills.rs
src/embed/: fastembed_provider.rs  mod.rs
src/storage/: mod.rs  sqlite.rs
src/storage/libsql/: backup.rs  constant.rs  db.rs  mod.rs  vector.rs
src/storage/turso/: backup.rs  constant.rs  db.rs  mod.rs  tx.rs  vector.rs
src/tests/: async_basics.rs  mod.rs
tests/: backend_api_contract_test.rs  bench_isolation.rs  cli_add_observations_test.rs  cli_agent_features_test.rs  cli_command_coverage_test.rs  cli_new_with_obs_test.rs  cli_search_where_test.rs  cli_tasks_test.rs  concurrency_test.rs  expansion_test.rs  graph_edge_cases.rs  normalization_test.rs  turso_foundations_test.rs  verbose_tool_test.rs  version_test.rs
