[package]
name = "asobi"
version = "0.3.0"
edition = "2024"
authors = ["haru <azusachino@proton.me>"]
description = "A persistent, project-local knowledge graph CLI for AI agents."
license = "MIT"
repository = "https://github.com/azusachino/asobi"
keywords = ["knowledge-graph", "cli", "ai-agents", "persistent-memory", "rust"]
categories = ["development-tools"]
# Never ship runtime data / model caches in the published crate. These dirs are
# gitignored, so a fresh CI checkout omits them anyway — this is belt-and-braces
# for local `cargo publish` where a stale workspace would otherwise be swept in.
exclude = [
  ".asobi/",
  ".fastembed_cache/",
  "memory_export.json",
  "tools_list.json",
]

# cargo-binstall: fetch prebuilt binaries from the GitHub release instead of
# compiling. Archives are published as `asobi-<target>.tar.gz` with the `asobi`
# binary at the archive root; the tag is `v<version>`.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[features]
default = []
documents = [
    "dep:fastembed",
]

[dependencies]
# Core
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
uuid = { version = "1", features = ["v4"] }


# CLI
clap = { version = "4.5", features = ["derive"] }
walkdir = "2"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Chunking & Embedding
fastembed = { version = "5", optional = true }


# Database & Vector Store
libsql = "0.6"
tempfile = "3"


[dev-dependencies]
filetime = "0.2"

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "normalize"
harness = false

[[bench]]
name = "vector"
harness = false
required-features = ["documents"]

[[bench]]
name = "skills"
harness = false


[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link Time Optimization
codegen-units = 1    # Maximize LTO impact
strip = true         # Remove symbols
panic = "abort"      # Remove panic handling overhead
