[package]
name = "asobi"
version = "0.6.1"
edition = "2024"
authors = ["haru <azusachino@proton.me>"]
description = "A persistent, project-local knowledge graph CLI for AI agents."
license = "MIT"
repository = "https://github.com/azusachino/asobi"
keywords = ["knowledge-graph", "cli", "ai-agents", "persistent-memory", "rust"]
categories = ["development-tools"]
# Never ship runtime data / model caches in the published crate. These dirs are
# gitignored, so a fresh CI checkout omits them anyway — this is belt-and-braces
# for local `cargo publish` where a stale workspace would otherwise be swept in.
exclude = [
  ".asobi/",
  "memory_export.json",
  "tools_list.json",
]

# cargo-binstall: fetch prebuilt binaries from the GitHub release instead of
# compiling. Archives are published as `asobi-<target>.tar.gz` with the `asobi`
# binary at the archive root; the tag is `v<version>`.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
# Core
anyhow = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
serde_json = "1"
schemars = "1"


# CLI
clap = { version = "4.6", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
clap_complete = "4.6"
walkdir = "2"
toml = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Database
rusqlite = { version = "0.40", features = ["bundled", "backup"] }


[dev-dependencies]
criterion = "0.7"
dhat = "0.3"
filetime = "0.2"
tempfile = "3"

[[bench]]
name = "normalize"
harness = false

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "graph_criterion"
harness = false

[[bench]]
name = "allocations"
harness = false

[[bench]]
name = "tasks"
harness = false

[[bench]]
name = "sql_plans"
harness = false

[[bench]]
name = "skills"
harness = false

[[bench]]
name = "storage"
harness = false


[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link Time Optimization
codegen-units = 1    # Maximize LTO impact
strip = true         # Remove symbols
panic = "abort"      # Remove panic handling overhead
